--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,10 +2,14 @@ server:
   port: 8080
   servlet:
     context-path: /watchez
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
 
 spring:
   datasource:
-    url: "jdbc:mysql://svr-freehost.vinahost.vn:3306/cqfzvzkv_watchez?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC"
+    url: "jdbc:mysql://svr-freehost.vinahost.vn:3306/cqfzvzkv_watchez?useSSL=false&allowPublicKeyRetrieval=&characterEncoding=utf8mb4&serverTimezone=UTC"
     username: cqfzvzkv_thuanht
     password: thuan2k3yg
   jpa:
