--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://svr-freehost.vinahost.vn:3306/cqfzvzkv_watchez?useSSL=false&allowPublicKeyRetrieval=&characterEncoding=utf8mb4&serverTimezone=UTC"
+    url: "jdbc:mysql://svr-freehost.vinahost.vn:3306/cqfzvzkv_watchez?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC"
     username: cqfzvzkv_thuanht
     password: thuan2k3yg
   jpa:
